// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwipeAction left only 1`] = `
<div
  class="za-swipe-action"
>
  <div
    class="za-swipe-action-actions-left"
  >
    <a
      aria-disabled="false"
      class="za-button theme-primary size-md shape-rect"
      role="button"
    >
      <span>
        左按钮1
      </span>
    </a>
    <a
      aria-disabled="false"
      class="za-button theme-warning size-md shape-rect"
      role="button"
    >
      <span>
        左按钮2
      </span>
    </a>
  </div>
  <div
    class="za-swipe-action-content"
    style="-webkit-transition-duration:undefinedms;transition-duration:undefinedms;-webkit-transform:translate3d(0px, 0, 0);transform:translate3d(0px, 0, 0)"
  >
    <div>
      右滑
    </div>
  </div>
</div>
`;

exports[`SwipeAction renders correctly 1`] = `
<SwipeAction
  animationDuration={300}
  left={
    Array [
      <Button
        block={false}
        disabled={false}
        ghost={false}
        loading={false}
        onClick={[MockFunction]}
        prefixCls="za-button"
        shape="rect"
        size="md"
        theme="primary"
      >
        左按钮1
      </Button>,
      <Button
        block={false}
        disabled={false}
        ghost={false}
        loading={false}
        onClick={[MockFunction]}
        prefixCls="za-button"
        shape="rect"
        size="md"
        theme="warning"
      >
        左按钮2
      </Button>,
    ]
  }
  moveDistanceRatio={0.5}
  moveTimeSpan={300}
  offset={10}
  prefixCls="za-swipe-action"
  right={
    Array [
      <Button
        block={false}
        disabled={false}
        ghost={false}
        loading={false}
        onClick={[MockFunction]}
        prefixCls="za-button"
        shape="rect"
        size="md"
        theme="primary"
      >
        右按钮1
      </Button>,
      <Button
        block={false}
        disabled={false}
        ghost={false}
        loading={false}
        onClick={[MockFunction]}
        prefixCls="za-button"
        shape="rect"
        size="md"
        theme="warning"
      >
        右按钮2
      </Button>,
    ]
  }
>
  <div
    className="za-swipe-action"
  >
    <div
      className="za-swipe-action-actions-left"
    >
      <Button
        block={false}
        disabled={false}
        ghost={false}
        key="0"
        loading={false}
        onClick={[Function]}
        prefixCls="za-button"
        shape="rect"
        size="md"
        theme="primary"
      >
        <a
          aria-disabled={false}
          className="za-button theme-primary size-md shape-rect"
          onClick={[Function]}
          onTouchStart={[Function]}
          role="button"
        >
          <span>
            左按钮1
          </span>
        </a>
      </Button>
      <Button
        block={false}
        disabled={false}
        ghost={false}
        key="1"
        loading={false}
        onClick={[Function]}
        prefixCls="za-button"
        shape="rect"
        size="md"
        theme="warning"
      >
        <a
          aria-disabled={false}
          className="za-button theme-warning size-md shape-rect"
          onClick={[Function]}
          onTouchStart={[Function]}
          role="button"
        >
          <span>
            左按钮2
          </span>
        </a>
      </Button>
    </div>
    <div
      className="za-swipe-action-actions-right"
    >
      <Button
        block={false}
        disabled={false}
        ghost={false}
        key="0"
        loading={false}
        onClick={[Function]}
        prefixCls="za-button"
        shape="rect"
        size="md"
        theme="primary"
      >
        <a
          aria-disabled={false}
          className="za-button theme-primary size-md shape-rect"
          onClick={[Function]}
          onTouchStart={[Function]}
          role="button"
        >
          <span>
            右按钮1
          </span>
        </a>
      </Button>
      <Button
        block={false}
        disabled={false}
        ghost={false}
        key="1"
        loading={false}
        onClick={[Function]}
        prefixCls="za-button"
        shape="rect"
        size="md"
        theme="warning"
      >
        <a
          aria-disabled={false}
          className="za-button theme-warning size-md shape-rect"
          onClick={[Function]}
          onTouchStart={[Function]}
          role="button"
        >
          <span>
            右按钮2
          </span>
        </a>
      </Button>
    </div>
    <Drag
      onDragEnd={[Function]}
      onDragMove={[Function]}
      onDragStart={[Function]}
    >
      <div
        className="za-swipe-action-content"
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "WebkitTransform": "translate3d(0px, 0, 0)",
            "WebkitTransitionDuration": "undefinedms",
            "transform": "translate3d(0px, 0, 0)",
            "transitionDuration": "undefinedms",
          }
        }
      >
        <div>
          左右都能滑动
        </div>
      </div>
    </Drag>
  </div>
</SwipeAction>
`;

exports[`SwipeAction right only 1`] = `
<div
  class="za-swipe-action"
>
  <div
    class="za-swipe-action-actions-right"
  >
    <a
      aria-disabled="false"
      class="za-button theme-primary size-md shape-rect"
      role="button"
    >
      <span>
        右按钮1
      </span>
    </a>
    <a
      aria-disabled="false"
      class="za-button theme-warning size-md shape-rect"
      role="button"
    >
      <span>
        右按钮2
      </span>
    </a>
  </div>
  <div
    class="za-swipe-action-content"
    style="-webkit-transition-duration:undefinedms;transition-duration:undefinedms;-webkit-transform:translate3d(0px, 0, 0);transform:translate3d(0px, 0, 0)"
  >
    <div>
      左滑
    </div>
  </div>
</div>
`;
